--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -7,9 +7,13 @@
         <variable
             name="photo"
             type="com.example.android_workings.data.models.PhotoModel" />
+        <variable
+            name="listener"
+            type="com.example.android_workings.views.adapters.RecyclerItemClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:onClick="@{() -> listener.onClick(photo)}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
