Adjust colors to support dark mode

--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -35,7 +35,7 @@
             android:maxEms="12"
             android:maxLines="1"
             android:text="@{photo.title}"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/thumbnail_iv"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{photo.id.toString()}"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/title_tv"
             app:layout_constraintStart_toEndOf="@+id/title_tv"
