--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -14,6 +14,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:onClick="@{() -> listener.onClick(photo)}"
+        android:paddingVertical="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
